    support.
  - Added support for table stub columns.
  - Added support for the ``align`` attribute on ``figure`` elements.
  - Added the ``cloak_email_addresses`` setting & support.
  - Added ``html_prolog``, ``html_head``, ``html_body``,
    ``html_title``, & ``html_subtitle`` to parts dictionary exposed by
    ``docutils.core.publish_parts``.

* docutils/writers/latex2e.py:

  - Improved --use-latex-docinfo so that organization/contact/address
    fields are lumped with the last author field and appear on the
    titlepage.
  - Made sure the titlepage is always shown with --use-latex-docinfo,
    even if the document has no title.
  - Made sure that latex doesn't fill in today's date if no date field
    was given.

* docutils/writers/null.py: Added to project; a do-nothing Writer.

* docs/api/publisher.txt:

  - Added "``publish_parts`` Details" section.

* docs/ref/docutils.dtd:

  - Added a ``stub`` attribute to the ``colspec`` element via the
    ``tbl.colspec.att`` parameter entity.
  - Allowed topic elements within sidebars
  - Added an ``align`` attribute to the ``figure`` element.


Release 0.3.7 (2004-12-24)
==========================

* docutils/frontend.py:

  - Added options: --input-encoding-error-handler,
    --record-dependencies, --leave-footnote-reference-space,
    --strict-visitor.
  - Added command-line and config file support for "overrides" setting
    parameter.

* docutils/io.py:

  - Added support for input encoding error handler.

* docutils/nodes.py:

  - Added dispatch_visit and dispatch_departure methods to
    NodeVisitor; useful as a hook for Visitors.
  - Changed structure of ``line_block``; added ``line``.
  - Added ``compound`` node class.
  - Added a mechanism for Visitors to transitionally ignore new node
    classes.

* docutils/utils.py:

  - Moved ``escape2null`` and ``unescape`` functions from
    docutils/parsers/rst/states.py.

* docutils/parsers/rst/roles.py:

  - Added "raw" role.