@@ -42,5 +42,19 @@ Attention
    |      | mid  | right |
    +------+------+-------+
 
+.. table:: row on left side
+
+   +------+---+-------+
+   | left | 1 | right |
+   | span |   +-------+
+   |      |   | secnd |
+   |      +---+-------+
+   |      |   | 3rd   |
+   |      |   +-------+
+   |      |   | single|
+   +------+---+-------+
+   | belo | 3 | b too |
+   +------+---+-------+
+
 
 
